Add Flyway migration plugin to pom.xml (did it for flyway:repair), enable async processing in CoremodsApplication (for storing game info to db in background without affecting api response), and enhance SearchGameByNameResponse with methods for image ID extraction and earliest release date retrieval. Update IgdbApiService to cache game results.